# trex

./: Cargo.toml  LICENSE  README.md
examples/: text_adventure.rs
src/: component.rs  entity.rs  event.rs  family.rs  id.rs  lib.rs  macros.rs  simulation.rs  system.rs  time.rs  world.rs  wrapper.rs
